--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/runtime": "^7.8.4",
     "meteor-node-stubs": "^1.0.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^16.13.1",
